--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     },
     "dependencies": {
         "axios": "^1.4.0",
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
-        "express": "^4.18.2",
+        "express": "^4.21.2",
         "firebase-admin": "^11.8.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
