--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
         "test": "jest"
     },
     "dependencies": {
+        "@google-cloud/firestore": "^7.11.3",
+        "@grpc/grpc-js": "^1.13.4",
         "axios": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "firebase-admin": "^11.8.0",
+        "google-gax": "^5.0.3",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
         "morgan": "^1.10.0"
